force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/Contract_Lifecycle_Tracker_DMO__dlm.object-meta.xml
<CustomObject>
    <label>Contract Lifecycle Tracker DMO</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Contract Lifecycle Tracker DMO</labelOverride>
        <masterLabel>Contract Lifecycle Tracker DMO</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataModelAttributes>
</CustomObject>