force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Active_Months_in_Evaluated_Period__c.field-meta.xml
<CustomField>
    <fullName>Active_Months_in_Evaluated_Period__c</fullName>
    <label>Active_Months_in_Evaluated_Period</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Active_Months_in_Evaluated_Period</labelOverride>
        <masterLabel>Active_Months_in_Evaluated_Period</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>