force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Actual_Sales_as_of__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_as_of__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual_Sales_as_of</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Actual_Sales_as_of</labelOverride>
        <masterLabel>Actual_Sales_as_of</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>