force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Actual_Sales_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_To_Date__c</fullName>
    <label>Actual_Sales_To_Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Actual_Sales_To_Date</labelOverride>
        <masterLabel>Actual_Sales_To_Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>