force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Agency_Actual_Sales_Percent_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Agency_Actual_Sales_Percent_Fulfilled__c</fullName>
    <label>Agency_Actual_Sales_Percent_Fulfilled</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Agency_Actual_Sales_Percent_Fulfilled</labelOverride>
        <masterLabel>Agency_Actual_Sales_Percent_Fulfilled</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>