force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Agency_Over_Under_Sales__c.field-meta.xml
<CustomField>
    <fullName>Agency_Over_Under_Sales__c</fullName>
    <label>Agency_Over_Under_Sales</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Agency_Over_Under_Sales</labelOverride>
        <masterLabel>Agency_Over_Under_Sales</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>