force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/agency_required_sales__c.field-meta.xml
<CustomField>
    <fullName>agency_required_sales__c</fullName>
    <label>Agency_Required_Sales</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Agency_Required_Sales</labelOverride>
        <masterLabel>Agency_Required_Sales</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>