force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Agency_Required_Sales_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Agency_Required_Sales_to_Date__c</fullName>
    <label>Agency_Required_Sales_to_Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Agency_Required_Sales_to_Date</labelOverride>
        <masterLabel>Agency_Required_Sales_to_Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>