force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Agreement_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Remaining__c</fullName>
    <label>Agreement_Remaining</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Agreement_Remaining</labelOverride>
        <masterLabel>Agreement_Remaining</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>