force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agreement_Start_Date</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Agreement_Start_Date</labelOverride>
        <masterLabel>Agreement_Start_Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>