force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Average_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Revenue__c</fullName>
    <label>Average_Monthly_Revenue</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Average_Monthly_Revenue</labelOverride>
        <masterLabel>Average_Monthly_Revenue</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>