force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Customer</labelOverride>
        <masterLabel>Customer</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>