force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CustomerID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CustomerID</labelOverride>
        <masterLabel>CustomerID</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>