force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Estimated_Contract_Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Contract_Completion_Percentage__c</fullName>
    <label>Estimated_Contract_Completion_Percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Estimated_Contract_Completion_Percentage</labelOverride>
        <masterLabel>Estimated_Contract_Completion_Percentage</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>