force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/KQ_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>KQ_Agreement_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Qualifier Agreement_Number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Agreement_Number</labelOverride>
        <masterLabel>Key Qualifier Agreement_Number</masterLabel>
        <refAttrDeveloperName>KQ_Agreement_Number</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>