force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Monthly_Revenue_Needed__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue_Needed__c</fullName>
    <label>Monthly_Revenue_Needed</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Monthly_Revenue_Needed</labelOverride>
        <masterLabel>Monthly_Revenue_Needed</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>