force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Over_Under__c.field-meta.xml
<CustomField>
    <fullName>Over_Under__c</fullName>
    <label>Over_Under</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Over_Under</labelOverride>
        <masterLabel>Over_Under</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>