force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/Percent_Fulfilled_To_Required__c.field-meta.xml
<CustomField>
    <fullName>Percent_Fulfilled_To_Required__c</fullName>
    <label>Percent_Fulfilled_To_Required</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Percent_Fulfilled_To_Required</labelOverride>
        <masterLabel>Percent_Fulfilled_To_Required</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>