force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/SAP_BP_Agreement_Target__c.field-meta.xml
<CustomField>
    <fullName>SAP_BP_Agreement_Target__c</fullName>
    <label>SAP_BP_Agreement_Target</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>SAP_BP_Agreement_Target</labelOverride>
        <masterLabel>SAP_BP_Agreement_Target</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>