force-app/main/default/objects/Contract_Lifecycle_Tracker_DMO__dlm/fields/SAP_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Contract_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SAP_Contract_Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>SAP_Contract_Status</labelOverride>
        <masterLabel>SAP_Contract_Status</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>